# fastapi

./: README.md  asgi.py  main.py  pyproject.toml  read.md  temp.py  test.sh  test_temp.py
.github/workflows/: ci.yml
app/: __init__.py
app/apis/v1/: meeting_router.py
app/configs/: __init__.py  base_settings.py  database_settings.py
app/dtos/: article_and_comment_response.py  create_meeting_response.py
app/models/: article.py  base_model.py  comment.py  mmr.py
app/routers/: article_router.py  health_routor.py  like_routor.py
app/services/: article_service.py
app/tests/: fixtures.py
app/tests/routers/: test_article_router.py
app/tests/services/: test_article_service.py
migrations/models/: 0_20241101151234_init.py
