[project]
name = "fastapi-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "mypy==1.13.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.2",
]

[tool.ruff]
target-version = "py313"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"